chess-ingress-80.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-ui-ingress
  namespace: chess
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chess-ui
            port:
              number: 80
